7 July 2010: Wouter
	- Neat function prototypes, unshadowed local declarations.

6 July 2010: Wouter
	- failure to chown the pidfile is not fatal any more.
	- testbound uses UTC timezone.
	- ldns tarball updated (ports and works on Minix 3.1.7).  On Minix, add
	  /usr/gnu/bin to PATH, use ./configure AR=/usr/gnu/bin/gar and gmake.

5 July 2010: Wouter
	- log if a server is skipped because it is on the donotquery list,
	  at verbosity 4, to enable diagnosis why no queries to 127.0.0.1.
	- added feature to print configure date, target and options with -h.
	- added feature to print event backend system details with -h.
	- wdiff is not actually required by make test, updated requirements.

1 July 2010: Wouter
	- Fix RFC4035 compliance with 2.2 statement that the DNSKEY at apex
	  must be signed with all algorithms from the DS rrset at the parent.
	  This is now checked and becomes bogus if not.

28 June 2010: Wouter
	- Fix jostle list bug found by Vince (luoce@cnnic), it caused the qps
	  in overload situations to be about 5 qps for the class of shortly
	  serviced queries.
	  The capacity of the resolver is then about (numqueriesperthread / 2)
	  / (average time for such long queries) qps for long queries.
	  And about (numqueriesperthread / 2)/(jostletimeout in whole seconds)
	  qps for short queries, per thread.
	- Fix the max number of reply-address count to be applied for duplicate
	  queries, and not for new query list entries.  This raises the memory
	  usage to a max of (16+1)*numqueriesperthread reply addresses.

25 June 2010: Wouter
	- Fix handling of corner case reply from lame server, follows rfc2308.
	  It could lead to a nodata reply getting into the cache if the search
	  for a non-lame server turned up other misconfigured servers.
	- unbound.h has extern "C" statement for easier include in c++.

23 June 2010: Wouter
	- iana portlist updated.
	- makedist upgraded cross compile openssl option, like this: 